test/tests/compiler/13_floating-point_numbers/invalid_types/extra_credit/bitwise_shift_double.plx
pub fn main(none) i32 {
    #  It's illegal to apply the << or >> operator to doubles 
    d: f64 = 5.0 << 3
    return 0
}
